# geo_modeler

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package-ci.yml  workflow.yml
geo_modeler/: __init__.py  feature.py  featurecollection.py  geometrycollection.py  linestring.py  multilinestring.py  multipoint.py  multipolygon.py  point.py  polygon.py  utils.py
tests/: test_feature.py  test_featurecollection.py  test_geometrycollection.py  test_linestring.py  test_multilinestring.py  test_multipoint.py  test_multipolygon.py  test_point.py  test_polygon.py
