[project]
name = "geo_modeler"
version = "0.1.dev0"
description = "GeoModeler is a Python project based on pydantic, designed to model and validate geojson data structures such as points, lines, and polygons. It provides a set of tools and validators for working with GeoJSON data."
authors = [{name = "jvanegmond", email = "jvanegmond@silverbirchgeospatial.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["geojson", "pydantic", "validation", "geospatial", "data-modeling"]  # Add relevant keywords
classifiers = [

    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = ["pydantic>=2.5.3"]

[project.urls]
homepage = "https://github.com/jvanegmond93/geo_modeler"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[tool.pytest.ini_options]
testpaths = [
    "tests"
]
